--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "prettier": "prettier --ignore-path .prettierignore \"**/*.+(js|json|ts|tsx)\"",
     "format": "npm run prettier -- --write",
+    "lint": "eslint . --ext js,jsx,ts,tsx",
     "test": "jest --watch"
   },
   "repository": {
@@ -22,6 +23,9 @@
   "devDependencies": {
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.41",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "eslint": "^7.24.0",
     "jest": "^26.6.3",
     "jest-watch-typeahead": "^0.6.2",
     "prettier": "^2.2.1",
