--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jest-watch-typeahead": "^0.6.3",
     "prettier": "^2.3.0",
     "ts-jest": "^26.5.6",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "browserslist": ">=4.16.5"
   }
 }
