--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,23 +1,14 @@
 version: 2
-registries:
-  npm-registry-npm-fontawesome-com:
-    type: npm-registry
-    url: https://npm.fontawesome.com
-    token: "${{secrets.NPM_REGISTRY_NPM_FONTAWESOME_COM_TOKEN}}"
 
 updates:
-- package-ecosystem: npm
-  directory: "/"
-  schedule:
-    interval: daily
-  open-pull-requests-limit: 10
-  reviewers:
-  - ReesMorris
-  assignees:
-  - ReesMorris
-  ignore:
-  - dependency-name: jest-watch-typeahead
-    versions:
-    - 0.6.3
-  registries:
-  - npm-registry-npm-fontawesome-com
+  - package-ecosystem: npm
+    directory: '/'
+    schedule:
+      interval: daily
+    open-pull-requests-limit: 10
+    reviewers:
+      - ReesMorris
+    assignees:
+      - ReesMorris
+    registries:
+      - npm-registry-npm-fontawesome-com
